# pysimlr

./: .coverage  .gitignore  DOCS_AUDIT.md  Makefile  README.md  build_paper.py  pyproject.toml
.gemini/: GEMINI.md  paper_notes.txt  settings.json
benchmarks/: metrics.py  plotting.py  runner.py  shared_private_sweep.py  synthetic_cases.py
configs/: benchmark_full.yaml  benchmark_smoke.yaml
docs/: benchmark_linear_noise_simlr_vs_lend.qmd  benchmark_nonlinear_noise_simlr_vs_ned.qmd  benchmark_nonlinear_private_noise_simlr_vs_nedpp.qmd  comparison_simlr_lend.qmd  comparison_simlr_lend_basic.qmd  deep_simlr_tutorial.qmd  deep_simr_tutorial.qmd  example_torch_ica.py  lend_nsa_encoder_demo.qmd  lend_simr_tutorial.qmd  tutorial_domain_knowledge.qmd
paper/: .env  01_intro_background.qmd  02_methods.qmd  02_methods.quarto_ipynb_1  03_experiments.qmd  03_experiments.quarto_ipynb_1  04_discussion.qmd  Bridging-the-Gap--From-Interpretable-Linear-Models-to-Deep-Multimodal-Integration-with-SiMLR.tex  Deep-SiMLR--Auditable-Multi-Modal-Integration-for-Biomedical-Discovery.tex  Deep-SiMLR--Interpretable-Multi-Modal-Learning-for-Biomedical-Discovery.tex  _quarto.yml  appendix_brca_clinical_validation.qmd  appendix_flow_simlr_v.qmd  appendix_operational.qmd  benchmark_new_datasets.py  build_paper_experiments.py  build_paper_intro.py  build_paper_methods.py  index.qmd  paper 2.tex  paper.tex  paper_audit.md  references.bib  revision_log.md
scripts/: analyze_cached_benchmarks.py  analyze_csv_manual.py  analyze_regimes_manual.py  analyze_v21_rigorous.py  benchmark_scaling.py  (+17 more)
(+96 files in other folders)
