[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysimlr"
version = "0.1.0"
description = "A professional PyTorch implementation of SIMLR"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools]
packages = ["pysimlr"]
package-dir = {"" = "src"}
